# ski-lift-status

./: .gitignore  CLAUDE.md  README.md  agents.md  discovery-results.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test-results.json  test.js  tsconfig.json
.claude/: settings.json
.github/badges/: config-status.json
.github/workflows/: build-configs.yml  ci.yml  claude-code.yml  claude-fix-config.yml  claude-respond-comment.yml  discover-status-pages.yml  get_ski_resort_data.yml  test-config-pipeline.yml  test-configs.yml
data/: .gitkeep  discovery_results.json  resorts.csv  status_pages.csv
docs/: debugging-guide.md
lib/: index.js  resorts.js
lib/fetchers/: base.js
lib/fetchers/lumiplan/: api.js  index.js  matcher.js
lumiplan-maps/: README.md  package-lock.json  package.json
lumiplan-maps/data/: aussois-lifts.json  aussois-runs.json  les-3-vallees-lifts.json  les-3-vallees-runs.json  orcieres-lifts.json  orcieres-runs.json  paradiski-lifts.json  paradiski-runs.json  tignes-valdisere-lifts.json  tignes-valdisere-runs.json  vaujany-lifts.json  vaujany-runs.json
lumiplan-maps/src/: cli.js  config.js  fetcher.js  generate-osm-data.js  index.js  matcher.js  test.js
scripts/: batch_discover_status_pages.py  build_configs.py  debug_pipeline.py  discover-status-pages.ts  discover_status_pages.py  fetch-openskimap-data.ts  fetch_data.py  find_lift_data.py  generate-status-pages.mjs  generate_configs.py  inspect_html.py  inspect_scripts.py  install_pkgs.sh  run_pipeline.py  test_analysis.py  test_capture.py  test_configs.py  test_pipeline.py  test_pipeline_debug.py  test_playwright.mjs  update_verified_status_pages.py
src/: cli.ts  index.test.ts  index.ts  resorts.ts  schema.ts
src/fetchers/: base.ts
src/fetchers/lumiplan/: api.ts  index.ts  matcher.ts
src/ski_lift_status/: __init__.py  data_fetcher.py  models.py  utils.py
src/ski_lift_status/config_pipeline/: __init__.py
src/ski_lift_status/config_pipeline/agent/: __init__.py  pipeline.py  tools.py
src/ski_lift_status/config_pipeline/analysis/: __init__.py  foreign_key_detector.py  lift_matcher.py  name_mapper.py  run_matcher.py  sample_extractor.py  schema_extractor.py  status_finder.py
src/ski_lift_status/configs/: README.md  name_mapper.js  resorts.json  runner.js
src/ski_lift_status/scraping/: __init__.py  agent.py  classifier.py  config_generator.py  logging_config.py  models.py  page_loader.py  pipeline.py  resort_config.py  schema_analyzer.py  source_mapper.py  status_normalizer.py
tests/: __init__.py  test_agent.py  test_classifier.py  test_models.py  test_pipeline.py  test_schema_analyzer.py  test_source_mapper.py  test_status_normalizer.py
tests/config_pipeline/: __init__.py
tests/config_pipeline/analysis/: test_foreign_key_detector.py  test_lift_matcher.py  test_schema_extractor.py  test_status_finder.py
(+73 files in other folders)
